css/templatemo-main.css
/* ... */
* {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  font-family: "Open Sans", sans-serif;
}

html {
	overflow: hidden;
}

body {
  overflow: hidden;
  font-size: 100%;
}

nav {
	top: 10vh;
	bottom: 10vh;
  	text-align: center;
  	background: rgba(0, 0, 0, 0.5);
  	position: fixed;
  	z-index: 100;
  	height: 80vh;
  	left: 0;
  	width: 20%;
  	font-weight: 300;
  	font-size: 1rem;
}

nav em {
	font-style: normal;
	margin-left: 5px;
	font-size: 14px;
}

nav ul li i {
	width: 25px;
}

nav ul li a {
	font-size: 18px;
}

nav .mini-logo {
	display: none;
}

nav .logo {
	margin-top: 45px;
	padding: 0px 20px;
}

nav .logo img {
	max-width: 100%;
	overflow-y: hidden;
}

nav ul {
	margin-top: 60px;
  	text-align: left;
  	margin-left: 40px;
  	list-style-type: none;
  	height: 48vh;
  	display: -webkit-box;
  	display: -ms-flexbox;
  	display: flex;
  	-webkit-box-orient: vertical;
  	-webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
  	-ms-flex-pack: distribute;
    justify-content: space-around;
}
nav ul li {
	margin: 25px 0px;
}
nav a, nav a:visited, nav a:active {
  color: #fff;
}
nav a {
	text-decoration: none!important;
	font-size: 14px;
	letter-spacing: 0.5px;
  	-webkit-transition: color 2s, background 1s;
  	transition: color 2s, background 1s;
  	padding: 20px 30px;
  	position: relative;
  	z-index: 0;
}
nav a.active {
  background-color: #fff;
  color: #232323;
}
nav a::before {
  content: "";
  position: absolute;
  height: 0%;
  width: 0%;
  bottom: 0;
  left: 0;
  opacity: 1;
  z-index: -1;
}
nav a:hover {
	text-decoration: none;
  -webkit-animation: fillColour 0.7s forwards ease-in-out;
          animation: fillColour 0.7s forwards ease-in-out;
}
nav a:hover::before {
  -webkit-animation: fill 0.7s forwards ease-in-out;
          animation: fill 0.7s forwards ease-in-out;
  opacity: 1;
}

.slides {
  width: 600vw;
  height: 100vh;
  -webkit-transition: -webkit-transform 0.8s ease;
  transition: -webkit-transform 0.8s ease;
  transition: transform 0.8s ease;
  transition: transform 0.8s ease, -webkit-transform 0.8s ease;
}
.slides .slide {
  height: 100vh;
  width: 100vw;
  float: left;
  text-align: center;
  background-size: cover;
}
.slides .slide .content {
  overflow-y: scroll;
  position: relative;
  width: 70%;
  height: 80%;
  left: 30%;
  top: 10%;
  bottom: 10%;
  background: rgba(0, 0, 0, 0.5);
}
.content::-webkit-scrollbar {
  width: 5px;
  height: 8px;
  background-color: rgba(0, 0, 0, 0.5);
}
/* Add a thumb */
.content::-webkit-scrollbar-thumb {
    background: rgba(250, 250, 250, 0.5);
}

.slides .slide:nth-child(1) {
  background-image: url(../img/first_bg.jpg);
}
.slides .slide:nth-child(2) {
  background-image: url(../img/second_bg.jpg);
}
.slides .slide:nth-child(3) {
  background-image: url(../img/third_bg.jpg);
}
.slides .slide:nth-child(4) {
  background-image: url(../img/fourth_bg.jpg);
 }
.slides .slide:nth-child(5) {
  background-image: url(../img/fifth_bg.jpg);
}
.slides .slide:nth-child(6) {
  background-image: url(../img/fourth_bg.jpg);
}
.slides .slide img {
  width: 100%;
}


.main-btn a:hover {
	background-color: #fff;
	color: #232323!important;
}

.new-button a:hover {
	background-color: #fff;
	color: #232323!important;
}



.first-content {
	padding: 100px;
	text-align: left;
	padding-top: 13%;
}

.first-content .author-image img {
	margin-top: -4em;
	margin-bottom: 500px;
	border-radius: 30px;
	width: 500px;
	max-width: 150%;
	overflow: hidden;
	float: left;
	margin-right: 35px;
}

.first-content h2 {
	font-size: 50px;
	text-transform: uppercase;
	font-weight: 700;
	color: #fff;
	letter-spacing: 0.5px;
	border-bottom: 2px solid #fff;
	display: inline-block;
	padding-bottom: 10px;
	margin-bottom: 20px;
	margin-right: auto;
	margin-top: 0px;
}

.first-content p {
	color: #fff;
	font-size: 13px;
	text-transform: uppercase;
	font-weight: 300;
	letter-spacing: 2px;
	line-height: 26px;
	margin-bottom: 20px;
}

.first-content em {
	font-style: normal;
	font-weight: 600;
}

.first-content .main-btn {
	display: inline-block;
	margin-right: 15px;
}

.first-content .new-button {
	display: inline-block;
	margin-right: 15px;
}


.first-content .main-btn a {
	display: inline-block;
	border: 2px solid #fff;
	padding: 8px 15px;
	font-size: 13px;
	text-transform: uppercase;
	letter-spacing: 1px;
	color: #fff;
	text-decoration: none;
	transition: all 0.5s;
	transition: all 0.5s;
}

.first-content .new-button a {
	display: inline-block;
	border: 2px solid #fff;
	padding: 8px 15px;
	font-size: 13px;
	text-transform: uppercase;
	letter-spacing: 1px;
	color: #fff;
	text-decoration: none;
	transition: all 0.5s;
	transition: all 0.5s;

}


.first-content .fb-btn {
	display: inline-block;
}

.first-content .fb-btn a {
	display: inline-block;
	background-color: #fff;
	border: 2px solid #fff;
	padding: 8px 15px;
	font-size: 13px;
	text-transform: uppercase;
	letter-spacing: 1px;
	color: #232323;
	text-decoration: none;
	transition: all 0.5s;
}

.first-content .fb-btn a:hover {
	color: #fff;
	background-color: transparent;
}


.second-content .container-fluid {
	padding-right: 0px;
	padding-left: 0px;
}

.second-content .container-fluid .col-md-6 {
	padding-right: 0px;
	padding-left: 0px;
}

.second-content .right-image img {
	max-width: 100%;
	min-width: 100%;
	overflow: hidden;
	float: right;
}

.second-content .left-content {
	padding: 60px;
	text-align: left;
}

.second-content h2 {
	font-size: 36px;
	text-transform: uppercase;
	font-weight: 700;
	color: #fff;
	letter-spacing: 0.5px;
	border-bottom: 2px solid #fff;
	display: inline-block;
	padding-bottom: 10px;
	margin-bottom: 20px;
	margin-top: 0px;
}

.second-content p {
	font-size: 13px;
	color: #fff;
	letter-spacing: 0.5px;
	font-weight: 300;
	line-height: 24px;
	margin-bottom: 30px;
}

.second-content a {
	color: #fff;
	text-decoration: underline;
}
/* ... */

